--- a/index.html
+++ b/index.html
@@ -1,121 +1,118 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>GM Ritual Dashboard</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>GM Ritual Dashboard ⚡</title>
 
-    <!-- WalletConnect UMD -->
-    <script src="https://unpkg.com/@walletconnect/modal@2.5.2/dist/index.umd.js"></script>
+  <script src="https://unpkg.com/@walletconnect/modal@2.5.2/dist/index.umd.js"></script>
 
-    <style>
-        body {
-            background: #11121a;
-            color: #fff;
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 25px;
-            text-align: center;
-        }
-
-        h1 {
-            font-size: 32px;
-            margin-top: 40px;
-            font-weight: bold;
-        }
-
-        button {
-            padding: 15px 25px;
-            border-radius: 10px;
-            border: none;
-            cursor: pointer;
-            margin: 15px 0;
-            font-size: 18px;
-            width: 85%;
-            max-width: 400px;
-        }
-
-        #connectBtn {
-            background: #005cff;
-            color: white;
-        }
-
-        .gmBtn {
-            background: #1c8eff;
-        }
-
-        .gnBtn {
-            background: #a061ff;
-        }
-
-        .sleepBtn {
-            background: #3a3a3a;
-        }
-
-        .deployLink {
-            margin-top: 30px;
-            display: block;
-            color: #7dc7ff;
-            text-decoration: none;
-            font-size: 18px;
-        }
-    </style>
+  <style>
+    body {
+      background-color: #0d0d0f;
+      font-family: Arial, sans-serif;
+      color: white;
+      margin: 0;
+      padding: 0;
+      text-align: center;
+    }
+    h1 {
+      margin-top: 40px;
+      font-size: 32px;
+      font-weight: bold;
+    }
+    button {
+      padding: 12px 22px;
+      border-radius: 8px;
+      border: none;
+      font-size: 18px;
+      cursor: pointer;
+      margin: 15px 0;
+      width: 70%;
+    }
+    #connectBtn {
+      background-color: #1c6cff;
+    }
+    #gmBtn {
+      background-color: #1c6cff;
+    }
+    #gnBtn {
+      background-color: #8b33ff;
+    }
+    #sleepBtn {
+      background-color: #333;
+      color: #aaa;
+    }
+    a {
+      color: #4aa3ff;
+      text-decoration: none;
+      margin-top: 30px;
+      display: block;
+    }
+  </style>
 </head>
 
 <body>
 
-<h1>GM Ritual Dashboard ⚡</h1>
+  <h1>GM Ritual Dashboard ⚡</h1>
 
-<button id="connectBtn">Connect Wallet</button>
+  <button id="connectBtn" onclick="connectWallet()">Connect Wallet</button>
 
-<button class="gmBtn" onclick="doRitual('GM')">GM Ritual 🌞</button>
-<button class="gnBtn" onclick="doRitual('GN')">GN Ritual 🌙</button>
-<button class="sleepBtn" onclick="doRitual('SLEEP')">GoSleep Ritual 😴</button>
+  <button id="gmBtn" onclick="doGM()">GM Ritual 🌞</button>
+  <button id="gnBtn" onclick="doGN()">GN Ritual 🌙</button>
+  <button id="sleepBtn" onclick="doSleep()">GoSleep Ritual 😴</button>
 
-<a class="deployLink" href="/deploy">Deploy your contract 🚀</a>
+  <a href="/deploy">Deploy your contract 🚀</a>
 
-<script>
-
-    const projectId = "2a3dfe7333d2ebd1e71b6d43f2f3e142";
-
+  <script>
+    const projectId = "48a2d3a850eb798ae0c8641887fea44f"; // WC ID kamu
     let provider = null;
     let walletAddress = null;
 
     async function connectWallet() {
-        try {
-            const modal = new window.WalletConnectModal.default({
-                projectId,
-                themeMode: "dark"
-            });
+      try {
+        const modal = new window.WalletConnectModal({
+          projectId: projectId,
+          themeMode: "dark",
+        });
 
-            provider = await modal.connect();
+        provider = await modal.connect();
+        const accounts = await provider.request({ method: "eth_accounts" });
 
-            const accounts = await provider.request({ method: "eth_accounts" });
-            walletAddress = accounts[0];
+        walletAddress = accounts[0];
 
-            document.getElementById("connectBtn").innerHTML =
-                "✅ Connected " + walletAddress.slice(0, 5) + "..." + walletAddress.slice(-4);
+        document.getElementById("connectBtn").innerText =
+          "✅ " + walletAddress.slice(0, 6) + "..." + walletAddress.slice(-4);
 
-            alert("Wallet connected: " + walletAddress);
-
-        } catch (err) {
-            alert("Connection failed: " + err.message);
-            console.log(err);
-        }
+        alert("Connected: " + walletAddress);
+      } catch (err) {
+        alert("Connection failed: " + err.message);
+      }
     }
 
-    document.getElementById("connectBtn").onclick = connectWallet;
-
-    async function doRitual(type) {
-        if (!walletAddress) {
-            alert("Connect wallet first!");
-            return;
-        }
-
-        alert(type + " ritual triggered! (dummy)");
+    function mustConnect() {
+      if (!walletAddress) {
+        alert("Connect wallet first!");
+        return false;
+      }
+      return true;
     }
 
-</script>
+    function doGM() {
+      if (!mustConnect()) return;
+      alert("GM Ritual executed! 🌞");
+    }
+
+    function doGN() {
+      if (!mustConnect()) return;
+      alert("GN Ritual executed! 🌙");
+    }
+
+    function doSleep() {
+      if (!mustConnect()) return;
+      alert("GoSleep Ritual executed 😴");
+    }
+  </script>
 
 </body>
-  </html>
+</html>
