--- a/index.html
+++ b/index.html
@@ -1,36 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>GM Ritual Dashboard ⚡</title>
-  <script src="https://unpkg.com/@walletconnect/modal/dist/index.umd.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.umd.min.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
-      font-family: Arial;
-      background: #0a0a0a;
+      margin: 0;
+      padding: 0;
+      font-family: Arial, sans-serif;
+      background: #0d0d0d;
       color: white;
       text-align: center;
-      padding: 20px;
     }
+
+    h1 {
+      font-size: 32px;
+      margin-top: 40px;
+      margin-bottom: 20px;
+    }
+
     button {
-      padding: 15px 30px;
+      padding: 14px 28px;
+      border-radius: 12px;
       border: none;
-      border-radius: 10px;
       font-size: 18px;
-      margin: 10px;
       cursor: pointer;
-      font-weight: bold;
+      margin: 12px;
+      width: 80%;
+      max-width: 350px;
+      transition: 0.2s;
     }
+
     #connectBtn {
-      background: #1a73e8;
+      background: #007bff;
       color: white;
     }
-    #gmBtn { background:#2196F3;color:white; }
-    #gnBtn { background:#9C27B0;color:white; }
-    #sleepBtn { background:#333;color:white; }
-    a { color:#7ab7ff; text-decoration:none; }
+
+    #connectBtn:hover {
+      background: #0066d4;
+    }
+
+    #gmBtn {
+      background: #1e90ff;
+      color: white;
+    }
+
+    #gnBtn {
+      background: #9b59b6;
+      color: white;
+    }
+
+    #sleepBtn {
+      background: #2c2c2c;
+      color: white;
+    }
+
+    #deployLink {
+      color: #8ab4f8;
+      font-size: 18px;
+      text-decoration: underline;
+      margin-top: 30px;
+      display: inline-block;
+    }
   </style>
 </head>
 
@@ -40,62 +73,114 @@
 
   <button id="connectBtn" onclick="connectWallet()">Connect Wallet</button>
 
-  <br><br>
-
-  <button id="gmBtn" disabled onclick="performGM()">GM Ritual 🌞</button>
-  <button id="gnBtn" disabled onclick="performGN()">GN Ritual 🌙</button>
-  <button id="sleepBtn" disabled onclick="performSleep()">GoSleep Ritual 😴</button>
+  <button id="gmBtn" disabled onclick="gmRitual()">GM Ritual ☀️</button>
+  <button id="gnBtn" disabled onclick="gnRitual()">GN Ritual 🌙</button>
+  <button id="sleepBtn" disabled onclick="sleepRitual()">GoSleep Ritual 😴</button>
 
   <br><br>
-  <a href="/deploy">Deploy your contract 🚀</a>
+  <a id="deployLink" href="/deploy">Deploy your contract 🚀</a>
 
-<script>
-  let wcModal;
-  let provider;
-  let signer;
-  let userAddress;
+  <!-- ✅ Ethers.js -->
+  <script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.umd.min.js"></script>
 
-  async function connectWallet() {
-    try {
-      wcModal = new window.WalletConnectModal.WalletConnectModal({
-        projectId: "48a2d3a850eb798ae0c8641887fea44f",
-        themeMode: "dark",
-      });
+  <!-- ✅ WalletConnect Universal Provider (mobile-safe) -->
+  <script src="https://unpkg.com/@walletconnect/universal-provider/dist/umd/index.min.js"></script>
 
-      provider = await wcModal.openModal();
+  <script>
+    const CONTRACT_ADDRESS = "0x725Ccb4ddCB715f468b301395Dfd1b1efDb5308A"; // gmbanditv2
+    let provider = null;
+    let signer = null;
+    let userAddress = null;
 
-      const accounts = await provider.request({ method: "eth_accounts" });
-      userAddress = accounts[0];
+    // ✅ ABI minimal
+    const ABI = [
+      "function gm() public",
+      "function gn() public",
+      "function gosleep() public"
+    ];
 
-      document.getElementById("connectBtn").innerText = 
-        "✅ " + userAddress.slice(0, 6) + "..." + userAddress.slice(-4);
+    async function connectWallet() {
+      try {
+        const UniversalProvider = window.WalletConnectUniversalProvider.default;
 
-      document.getElementById("gmBtn").disabled = false;
-      document.getElementById("gnBtn").disabled = false;
-      document.getElementById("sleepBtn").disabled = false;
+        provider = await UniversalProvider.init({
+          projectId: "48a2d3a850eb798ae0c8641887fea44f", // ✅ secure & working
+          metadata: {
+            name: "GM-Bandit Ritual",
+            description: "Dashboard for GM Ritual",
+            url: "https://gm-bandit.vercel.app",
+            icons: ["https://gm-bandit.vercel.app/logo.png"]
+          }
+        });
 
-      signer = new ethers.providers.Web3Provider(provider).getSigner();
+        const session = await provider.connect({
+          namespaces: {
+            eip155: {
+              methods: ["eth_sendTransaction"],
+              chains: ["eip155:8453"],
+              rpcMap: {
+                8453: "https://mainnet.base.org"
+              }
+            }
+          }
+        });
 
-    } catch (err) {
-      alert("Connection failed: " + err);
+        const account = session.namespaces.eip155.accounts[0].split(":")[2];
+        userAddress = account;
+
+        document.getElementById("connectBtn").innerText =
+          "✅ " + account.slice(0, 6) + "..." + account.slice(-4);
+
+        // ✅ Enable action buttons
+        document.getElementById("gmBtn").disabled = false;
+        document.getElementById("gnBtn").disabled = false;
+        document.getElementById("sleepBtn").disabled = false;
+
+        // ✅ convert provider to ethers provider
+        const ethersProvider = new ethers.providers.Web3Provider(provider);
+        signer = ethersProvider.getSigner();
+
+      } catch (err) {
+        alert("Connection failed: " + err.message);
+      }
     }
-  }
 
-  async function performGM() {
-    if (!signer) return alert("Connect wallet first!");
-    alert("✅ GM Ritual sent! (Dummy — smart contract call coming later)");
-  }
+    async function gmRitual() {
+      if (!signer) return alert("Connect wallet first!");
 
-  async function performGN() {
-    if (!signer) return alert("Connect wallet first!");
-    alert("✅ GN Ritual sent!");
-  }
+      const contract = new ethers.Contract(CONTRACT_ADDRESS, ABI, signer);
+      try {
+        await contract.gm();
+        alert("✅ GM Ritual executed!");
+      } catch (err) {
+        alert("Transaction failed: " + err.message);
+      }
+    }
 
-  async function performSleep() {
-    if (!signer) return alert("Connect wallet first!");
-    alert("😴 GoSleep Ritual executed!");
-  }
-</script>
+    async function gnRitual() {
+      if (!signer) return alert("Connect wallet first!");
 
+      const contract = new ethers.Contract(CONTRACT_ADDRESS, ABI, signer);
+      try {
+        await contract.gn();
+        alert("✅ GN Ritual executed!");
+      } catch (err) {
+        alert("Transaction failed: " + err.message);
+      }
+    }
+
+    async function sleepRitual() {
+      if (!signer) return alert("Connect wallet first!");
+
+      const contract = new ethers.Contract(CONTRACT_ADDRESS, ABI, signer);
+      try {
+        await contract.gosleep();
+        alert("✅ GoSleep Ritual executed!");
+      } catch (err) {
+        alert("Transaction failed: " + err.message);
+      }
+    }
+  </script>
 </body>
+
 </html>
